k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-orphanages
spec:
  selector:
    app: api-orphanages
  ports:
  - port: 80
    targetPort: 3333
    nodePort: 30001
  type: LoadBalancer
