k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata: 
  name: api-orphanages
spec:
  rules:
  - host: api.happy.local
    http:
      paths:
      - backend:
          serviceName: api-orphanages
          servicePort: 80
